--- a/back-end/laravel/composer.json
+++ b/back-end/laravel/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
+        "laravelcollective/html": "^6.0",
         "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
